--- a/packages/extras-buildpkgs/iw/debian/changelog
+++ b/packages/extras-buildpkgs/iw/debian/changelog
@@ -1,3 +1,60 @@
+iw (5.19-1) unstable; urgency=medium
+
+  [ Paride Legovini ]
+  * New upstream version 5.19.
+    (Closes: #974833, thanks to Diederik de Haas)
+  * d/control: bump Standards-Version to 4.6.1, no changes needed
+  * d/control: fix spelling error in description
+
+  [ Ben Hutchings ]
+  * d/salsa-ci.yml: Add CI configuration for Salsa
+  * d/rules: Enable verbose build unless the "terse" build option is used
+
+ -- Paride Legovini <paride@debian.org>  Tue, 12 Jul 2022 22:30:15 +0000
+
+iw (5.16-1) unstable; urgency=medium
+
+  * New upstream version 5.16
+  * d/control: bump Standards-Version to 4.6.0, no changes needed
+  * d/gbp.conf: set debian-branch = debian/latest (DEP-14)
+  * d/copyright: update copyright years for debian/*
+
+ -- Paride Legovini <paride@debian.org>  Mon, 15 Nov 2021 16:32:58 +0000
+
+iw (5.9-3) unstable; urgency=medium
+
+  * d/control:
+    - Add Recommends: wireless-regdb, which provides the regulatory database
+      used by the kernel to comply with WiFi regulations. Thanks to Paul Wise.
+    - Update package description (Closes: #825031).
+
+ -- Paride Legovini <paride@debian.org>  Sun, 01 Nov 2020 14:03:12 +0000
+
+iw (5.9-2) unstable; urgency=medium
+
+  * d/control: drop Recommends: crda (deprecated since linux v4.15)
+    Thanks to Diederik de Haas (Closes: #972994)
+
+ -- Paride Legovini <paride@debian.org>  Tue, 27 Oct 2020 11:12:03 +0000
+
+iw (5.9-1) unstable; urgency=medium
+
+  * New upstream version 5.9
+
+ -- Paride Legovini <paride@debian.org>  Mon, 26 Oct 2020 18:45:42 +0000
+
+iw (5.8-1) unstable; urgency=medium
+
+  * New upstream version 5.8.
+  * d/control:
+    - Bump Standards-Version to 4.5.0, no changes needed.
+    - Bump the dh compat level to 13, no changes needed.
+    - Remove relations with ancient packages.
+  * d/copyright: update names and years.
+  * debian/*: rewrap (cosmetic, wrap-and-sort -ast).
+
+ -- Paride Legovini <paride@debian.org>  Thu, 03 Sep 2020 15:52:34 +0000
+
 iw (5.4-1) unstable; urgency=medium
 
   * New upstream version 5.4.
